syntax = "proto3";

import "github.com/golang/protobuf/ptypes/timestamp/timestamp.proto";
import "resource.proto";
import "model.proto";

package model;

option go_package = "github.com/axsh/openvdc/model";

message Console {
  enum Transport {
    SSH = 0;
  }
  Transport type = 1;
  string bind_addr = 2 [json_name="bind_addr"];
}

message ExecutorNode {
  string id = 1;
  google.protobuf.Timestamp created_at = 2 [json_name="created_at"];

  Console console = 3;
  string grpc_addr = 4 [json_name="grpc_addr"];
  NodeState last_state = 5 [json_name="last_state"];
}

message SchedulerNode {
  string id = 1;
  google.protobuf.Timestamp created_at = 2 [json_name="created_at"];
}

message AgentNode {
  string agent_mesos_id = 1;
  string agent_id = 2;
  google.protobuf.Timestamp created_at = 3;
}

message CrashedNode {
  string uuid = 1;
  string agent_id = 2;
  string agent_mesos_id = 3;
  bool reconnected = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp reconnected_at = 6;
}

message MonitorNode {
  string id = 1;
  string grpc_addr = 2;
  model.ComputingResources resources = 3;
  google.protobuf.Timestamp created_at = 4;
}

message NodeState {
  enum State {
    REGISTERED = 0;
  }
  State state = 1;
  google.protobuf.Timestamp created_at = 2 [json_name="created_at"];
}
